添加Java程序安全控制