@@ -3,10 +3,13 @@ package com.ryanverse.ojstarcodesanbox;
 import cn.hutool.core.io.FileUtil;
 import cn.hutool.core.io.resource.ResourceUtil;
 import cn.hutool.core.util.StrUtil;
+import cn.hutool.dfa.FoundWord;
+import cn.hutool.dfa.WordTree;
 import com.ryanverse.ojstarcodesanbox.model.ExecuteCodeRequest;
 import com.ryanverse.ojstarcodesanbox.model.ExecuteCodeResponse;
 import com.ryanverse.ojstarcodesanbox.model.ExecuteMessage;
 import com.ryanverse.ojstarcodesanbox.model.JudgeInfo;
+import com.ryanverse.ojstarcodesanbox.security.DenySecurityManager;
 import com.ryanverse.ojstarcodesanbox.utils.ProcessUtils;
 
 import java.io.File;
@@ -33,7 +36,18 @@ public class JavaNativeCodeSandbox implements CodeSandbox {
 	private static final String GLOBAL_JAVA_CLASS_NAME = "Main.java";
 	private static final String SIMPLE_COMPUTE_MAIN = "testCode/simpleCompute/Main.java";
 	private static final String SIMPLE_COMPUTE_ARGS_MAIN = "testCode/simpleComputeArgs/Main.java";
-	private static final String UNSAFE_CODE_MAIN = "testCode/unsafeCode/WriteFileError.java";
+	private static final String UNSAFE_CODE_MAIN = "testCode/unsafeCode/RunFileError.java";
+
+	private static final long TIME_OUT = 5000L;
+	private static final List<String> blackList = Arrays.asList("Files", "exec");
+	private static final WordTree WORD_TREE;
+	static {
+		// 初始化字典树
+		WORD_TREE = new WordTree();
+		WORD_TREE.addWords(blackList);
+	}
+
+	public static final String SECURITY_MANAGER_PATH = "D:\\WorkSpace\\IDEA_ws\\ojstar-code-sanbox\\src\\main\\resources\\security";
 
 	public static void main (String[] args) {
 		JavaNativeCodeSandbox javaNativeCodeSandbox = new JavaNativeCodeSandbox();
@@ -49,13 +63,24 @@ public class JavaNativeCodeSandbox implements CodeSandbox {
 
 	@Override
 	public ExecuteCodeResponse executeCode (ExecuteCodeRequest executeCodeRequest) {
+//		System.setSecurityManager(new DenySecurityManager());
+
 		List<String> inputList = executeCodeRequest.getInputList();
 		String code = executeCodeRequest.getCode();
 		String language = executeCodeRequest.getLanguage();
 
+//		//  校验代码中是否包含黑名单中的禁用词
+//		FoundWord foundWord = WORD_TREE.matchWord(code);
+//		if (foundWord != null) {
+//			System.out.println("包含禁止词：" + foundWord.getFoundWord());
+//			return null;
+//		}
+
+
+		// 1.把用户代码保存为文件
 		String userDir = System.getProperty(USER_DIR);
 		String codePath = userDir + File.separator + GLOBAL_CODE_PATH;
-		// 1.判断是否存在全局目录, 否则新建
+		// 判断是否存在全局目录, 否则新建
 		if (!FileUtil.exist(codePath)) {
 			FileUtil.mkdir(codePath);
 		}
@@ -75,9 +100,19 @@ public class JavaNativeCodeSandbox implements CodeSandbox {
 		// 3.执行代码
 		List<ExecuteMessage> executeMessageList = new ArrayList<>();
 		for (String inputArgs : inputList) {
-			String runCmd = String.format("java -Dfile.encoding=UTF-8 -cp %s Main %s", userCodeParentPath, inputArgs);
+			String runCmd = String.format("java -Dfile.encoding=UTF-8 -cp %s;%s -Djava.security.manager=MySecurityManager Main", userCodeParentPath, SECURITY_MANAGER_PATH, inputArgs);
+//			String runCmd = String.format("java -Xmx256m -Dfile.encoding=UTF-8 -cp %s Main %s", userCodeParentPath, inputArgs);
 			try {
 				Process runProcess = Runtime.getRuntime().exec(runCmd);
+				// 新建线程, 超时则销毁进程
+				new Thread(() -> {
+					try {
+						Thread.sleep(TIME_OUT);
+						runProcess.destroy();
+					} catch (InterruptedException e) {
+						e.printStackTrace();
+					}
+				}).start();
 				ExecuteMessage executeMessage = ProcessUtils.runProcessAndGetMessage(runProcess, "运行");
 //				ExecuteMessage executeMessage = ProcessUtils.runInteractProcessAndGetMessage(runProcess, inputArgs);
 				System.out.println(executeMessage);
